ingress.yaml
#for alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myntra
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /myntra
            pathType: Prefix
            backend:
              service:
                name: myntra-service
                port:
                  number: 3000


---
# for nlb

apiVersion: v1
kind: Service
metadata:
  name: nlb-myntra
  labels: 
    app: myntra
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb    # To create Network Load Balancer
spec:
  type: LoadBalancer # Default - CLB
  selector:
    app: usermgmt-restapp
  ports: 
    
port: 80
    targetPort: 8095
